k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-linkops
  labels:
    name: demo-linkops
    environment: demo
