k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-frontend
  namespace: demo-linkops
spec:
  type: ClusterIP
  selector:
    app: demo-frontend
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
